# fastuidraw

./: CMakeLists.txt  Makefile.gl_backend.settings.mk  simple_bench.sh
demos/common/: PanZoomTracker.cpp  generic_command_line.cpp  generic_command_line.hpp  read_dash_pattern.hpp  sdl_demo.cpp  sdl_demo.hpp  sdl_painter_demo.cpp  sdl_painter_demo.hpp  text_helper.cpp
demos/painter_cells/: cell.cpp  cell.hpp  cell_group.cpp  main.cpp  table.cpp
demos/painter_path_test/: main.cpp
demos/painter_test/: main.cpp
inc/fastuidraw/: colorstop.hpp  colorstop_atlas.hpp  image.hpp  path.hpp  tessellated_path.hpp
inc/fastuidraw/c/: colorstop_atlas_gl.h  colorstop_atlas_gl_params.h  configuration_gl.h  gl_binding.h  globals_private.h  glyph_atlas_gl.h  glyph_atlas_gl_params.h  image.h  image_atlas_gl.h  image_atlas_gl_params.h  image_loader.h  painter.h  painter_attribute_data.h  painter_backend.h  painter_backend_gl.h  painter_brush.h  painter_dashed_stroke_params.h  painter_data.h  painter_stroke_params.h  path.h
inc/fastuidraw/gl_backend/: colorstop_atlas_gl.hpp  gl_binding.hpp  gl_context_properties.hpp  gl_get.hpp  gl_program.hpp  glyph_atlas_gl.hpp  image_gl.hpp  opengl_trait.hpp  painter_backend_gl.hpp
inc/fastuidraw/glsl/: painter_backend_glsl.hpp  painter_blend_shader_glsl.hpp  painter_brush_shader_glsl.hpp  painter_item_shader_glsl.hpp  shader_source.hpp
inc/fastuidraw/painter/: filled_path.hpp  painter.hpp  painter_attribute.hpp  painter_attribute_data.hpp  painter_attribute_data_filler.hpp  painter_attribute_data_filler_glyphs.hpp  painter_blend_shader.hpp  painter_blend_shader_set.hpp  painter_brush.hpp  painter_brush_shader.hpp  painter_brush_shader_set.hpp  painter_clip_equations.hpp  painter_dashed_stroke_params.hpp  painter_dashed_stroke_shader_set.hpp  painter_data.hpp  painter_fill_shader.hpp  painter_glyph_shader.hpp  painter_header.hpp  painter_item_matrix.hpp  painter_item_shader.hpp  painter_packed_value.hpp  painter_shader.hpp  painter_shader_data.hpp  painter_shader_set.hpp  painter_stroke_params.hpp  painter_stroke_shader.hpp  stroked_path.hpp
inc/fastuidraw/painter/blend/: painter_blend_shader_set.hpp
inc/fastuidraw/painter/brush/: image_params.hpp  linear_gradient_params.hpp  painter_brush.hpp  painter_brush_shader_data.hpp  painter_brush_shader_set.hpp  pen_params.hpp  radial_gradient_params.hpp  repeat_window_params.hpp  transformation_matrix_params.hpp  transformation_translation_params.hpp  unified_brush_params.hpp
inc/fastuidraw/painter/packing/: painter_backend.hpp  painter_clip_equations.hpp  painter_draw.hpp  painter_header.hpp  painter_item_matrix.hpp  painter_packed_value.hpp  painter_packer.hpp  painter_packer_data.hpp  painter_shader_group.hpp
inc/fastuidraw/painter/paths/: painter_attribute_data_filler_path_fill.hpp  painter_dashed_stroke_params.hpp  painter_dashed_stroke_shader_set.hpp  painter_stroke_params.hpp
inc/fastuidraw/text/: font.hpp  font_properties.hpp  freetype_font.hpp  freetype_lib.hpp  glyph.hpp  glyph_atlas.hpp  glyph_cache.hpp  glyph_layout_data.hpp  glyph_location.hpp  glyph_render_data.hpp  glyph_render_data_coverage.hpp  glyph_render_data_curve_pair.hpp  glyph_render_data_distance_field.hpp  glyph_selector.hpp
inc/fastuidraw/util/: blend_mode.hpp  reference_count_atomic.hpp  reference_count_mutex.hpp  reference_count_non_concurrent.hpp  static_resource.hpp  util.hpp
src/fastuidraw/: colorstop_atlas.cpp  tessellated_path.cpp
src/fastuidraw/c/: Makefile  colorstop_atlas_gl.cpp  colorstop_atlas_gl_params.cpp  configuration_gl.cpp  gl_binding.cpp  globals_private.cpp  glyph_atlas_gl.cpp  glyph_atlas_gl_params.cpp  image.cpp  image_atlas_gl.cpp  image_atlas_gl_params.cpp  image_loader.c  painter.cpp  painter_backend.cpp  painter_backend_gl.cpp  painter_brush.cpp  painter_dashed_stroke_params.cpp  painter_stroke_params.cpp  path.cpp  test.c
src/fastuidraw/gl_backend/: gl_binding.cpp  gl_get.cpp  gl_program.cpp
src/fastuidraw/glsl/: Rules.mk  painter_backend_glsl.cpp  painter_brush_shader_glsl.cpp  painter_item_shader_glsl.cpp  shader_source.cpp
src/fastuidraw/glsl/private/: backend_shaders.cpp  backend_shaders.hpp  uber_shader_builder.cpp  uber_shader_builder.hpp
src/fastuidraw/glsl/shaders/painter/: Rules.mk  fastuidraw_painter_fill.frag.glsl.resource_string  fastuidraw_painter_fill.vert.glsl.resource_string  fastuidraw_painter_forward_declares.frag.glsl.resource_string  fastuidraw_painter_forward_declares.vert.glsl.resource_string  fastuidraw_painter_globals.vert.glsl.resource_string  fastuidraw_painter_main.frag.glsl.resource_string  fastuidraw_painter_types.glsl.resource_string  (+1 more)
src/fastuidraw/painter/: Rules.mk  filled_path.cpp  painter.cpp  painter_brush.cpp  painter_brush_shader_set.cpp  painter_dashed_stroke_params.cpp  painter_fill_shader.cpp  painter_shader_set.cpp  stroked_path.cpp
src/fastuidraw/painter/blend/: Rules.mk  painter_blend_shader_set.cpp
src/fastuidraw/painter/brush/: Rules.mk  image_params.cpp  linear_gradient_params.cpp  painter_brush.cpp  painter_brush_shader_data.cpp  painter_brush_shader_set.cpp  pen_params.cpp  radial_gradient_params.cpp  repeat_window_params.cpp  transformation_matrix_params.cpp  transformation_translation_params.cpp  unified_brush_params.cpp
src/fastuidraw/painter/packing/: painter_backend.cpp  painter_clip_equations.cpp  painter_header.cpp  painter_item_matrix.cpp  painter_packer.cpp
src/fastuidraw/painter/paths/: Rules.mk  filled_path.cpp  painter_attribute_data_filler_path_fill.cpp  painter_dashed_stroke_params.cpp  painter_dashed_stroke_shader_set.cpp  painter_fill_shader.cpp  painter_stroke_params.cpp  painter_stroke_shader.cpp  stroked_path.cpp
src/fastuidraw/painter/text/: Rules.mk  painter_attribute_data_filler_glyphs.cpp  painter_glyph_shader.cpp
src/fastuidraw/private/: interval_allocator.cpp  interval_allocator.hpp
src/fastuidraw/text/: glyph_render_data_curve_pair.cpp
src/fastuidraw/text/private/: freetype_curvepair_util.cpp  freetype_util.cpp  freetype_util.hpp  rect_atlas.cpp
src/fastuidraw/util/: reference_count_atomic.cpp
(+19 files in other folders)
